sumo/tests/traci/VariableSubscription/errors/UnknownCommand/testclient.prog
simstep2 200
subscribevariable 255 0 0 1000 1 64
simstep2 0

